2010-04-16  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-04-09  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sparc/sol2-gld.h: Remove SPARC reference.  Rename ...
	* config/sol2-gld.h: ... here.
	* config.gcc (sparc*-*-solaris2*): Reflect this.
	(i[34567]86-*-solaris2*): Use it.

2010-04-16  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-04-09  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac: Determine Sun ld version numbers.
	(comdat_group): Restrict GNU ld version checks to gld.
	(comdat_group, *-*-solaris2.1[1-9]*): Enable for Sun ld > 1.1688.
	(enable_comdat): Support --enable-comdat.
	* configure: Regenerate.
	* doc/install.texi (Configuration): Document --enable-comdat.

2010-04-01  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-04-14  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*divmod<mode>4): Remove stray "&&" from
	splitter condition.
	(*udivmod<mode>4): Ditto.

	2010-04-14  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*popcountsi2_cmp_zext): Remove mode attribute
	from insn template.

2010-04-15  Thomas Schwinge  <tschwinge@gnu.org>

	Backport from mainline:
	2010-04-15  Thomas Schwinge  <tschwinge@gnu.org>

	* config.gcc <i[34567]86-*-gnu*>: Handle softfp as for Linux.

2010-04-15  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43627
	* tree-vrp.c (extract_range_from_unary_expr): Widenings
	of [1, +INF(OVF)] go to [1, +INF(OVF)] of the wider type,
	not varying.

2010-04-14  Richard Guenther  <rguenther@suse.de>

	* DEV-PHASE: Set back to prerelease.
	* BASE-VER: Bump to 4.5.1.

2010-04-14  Release Manager

	* GCC 4.5.0 released.

2010-04-13  Michael Matz  <matz@suse.de>

	PR middle-end/43730
	* builtins.c (expand_builtin_interclass_mathfn): Also create
	a register if the predicate doesn't match.

2010-04-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/contrib.texi (Contributors, Rainer Orth): Update.
